added fixes for slick slider, GSAP TweenLite & TweenMax (stagger)

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,6 +1,8 @@
 // done by riverco.de
 @import helpers/all
 @import generated/sprite-svg
+@import lib/_slick
+@import lib/_slick-theme
 @import common
 @import layouts
 @import main
