--- a/src/sass/jetro.sass
+++ b/src/sass/jetro.sass
@@ -1,3 +1,4 @@
+
 $main-color: #e8603c
 $secondary-color: #f3af9d
 
@@ -36,8 +37,10 @@ $secondary-color: #f3af9d
     padding: 22px 0
     display: flex
     align-items: center
+    position: relative
   &__img
     height: 34px
+    position: absolute
   &__navigation
     margin-left: auto
     display: flex
@@ -66,7 +69,7 @@ $secondary-color: #f3af9d
 
 .content
   .left:before
-    background: url('../img/jetro/icon1.png') 0 0 / 100% 100% no-repeat
+    background: url('../img/jetro/icon1.svg') 0 0 / 100% 100% no-repeat
   &__center
     display: flex
   &__left
@@ -80,7 +83,7 @@ $secondary-color: #f3af9d
   &__article
     display: flex
     font-size: 12px
-    margin-bottom: 30px
+    margin: 20px 0 30px
   &__dates
     display: flex
     flex-direction: column
@@ -146,7 +149,7 @@ $secondary-color: #f3af9d
 .article
   margin-top: 55px
   .left:before
-    background: url('../img/jetro/icon2.png') 0 0 / 100% 100% no-repeat
+    background: url('../img/jetro/icon2.svg') 0 0 / 100% 100% no-repeat
   &__content
     width: 70%
     min-width: 70%
@@ -155,7 +158,7 @@ $secondary-color: #f3af9d
 .quote
   margin-top: 55px
   .left:before
-    background: url('../img/jetro/icon3.png') 0 0 / 100% 100% no-repeat
+    background: url('../img/jetro/icon3.svg') 0 0 / 100% 100% no-repeat
   &__content
     width: 70%
     min-width: 70%
@@ -168,7 +171,7 @@ $secondary-color: #f3af9d
     &:before
       content: ""
       position: absolute
-      background: url('../img/jetro/icon6.png') 0 0 / 100% 100% no-repeat
+      background: url('../img/jetro/icon4.svg') 0 0 / 100% 100% no-repeat
       width: 25px
       height: 20px
       left: 35px
@@ -176,7 +179,7 @@ $secondary-color: #f3af9d
 .linker
   margin-top: 55px
   .left:before
-    background: url('../img/jetro/icon4.png') 0 0 / 100% 100% no-repeat
+    background: url('../img/jetro/icon5.svg') 0 0 / 100% 100% no-repeat
   &__content
     width: 70%
     min-width: 70%
