--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -5,8 +5,8 @@
   <header class="main__block header">
     <aside class="left"></aside>
     <div class="header__menu center">
-      <img class="header__img" src="img/jetro/JETRO.png" alt="JETRO" />
-      <ul class="header__navigation">
+      <img id="logo" class="header__img" src="img/jetro/JETRO.png" alt="JETRO" />
+      <ul id="navigation" class="header__navigation">
         {% import "data/jetro.html" as tests %}
 
         {% for test in tests.list %}
@@ -29,7 +29,7 @@
       <div class="content__left">
         <div id="slider" class="slider">
           <img src="img/jetro/img1.png" alt="img1" class="content__img"/>
-          <!--<img src="img/jetro/img3.png" alt="img3" class="content__img"/>-->
+          <img src="img/jetro/img3.png" alt="img3" class="content__img"/>
         </div>
         <div class="content__article">
           <div class="content__dates">
